End of 1st Class!

--- a/.gitignore
+++ b/.gitignore
@@ -1076,3 +1076,30 @@ Temp/UnityTempFile-1c53541519833f7498448e3d90bd3d7a
 Temp/UnityTempFile-275300e079be3684cb3fadb2061ade61
 Temp/UnityTempFile-5da1fa2cbb8e5c64f900fbdadda3bb66
 Temp/UnityTempFile-630c27147699c4a4fa1a8ae389e24c9f
+Library/metadata/2e/2e0f9cd00a365904a84507c2f81ec64f
+Library/metadata/2e/2e0f9cd00a365904a84507c2f81ec64f.info
+Library/metadata/2f/2f14388ad20355944be36a1d539c8b43
+Library/metadata/2f/2f14388ad20355944be36a1d539c8b43.info
+Library/metadata/58/58809886a7599c94eb5c42eb2d7a5a09
+Library/metadata/58/58809886a7599c94eb5c42eb2d7a5a09.info
+Library/metadata/5c/5c7657ed19c03d8409b09b33037a7ab7
+Library/metadata/5c/5c7657ed19c03d8409b09b33037a7ab7.info
+Library/metadata/61/61c4ee34a5f96fd44b9659cbb48abdd6
+Library/metadata/61/61c4ee34a5f96fd44b9659cbb48abdd6.info
+Library/metadata/78/78e32f904b1ab0b4a983d3ddb04d4f5b
+Library/metadata/78/78e32f904b1ab0b4a983d3ddb04d4f5b.info
+Library/metadata/81/8157638839643cd4695677fca5184e65
+Library/metadata/81/8157638839643cd4695677fca5184e65.info
+Library/metadata/bc/bcb459b3e347e7a429dba49d41852577
+Library/metadata/bc/bcb459b3e347e7a429dba49d41852577.info
+Library/metadata/bd/bd2e6adb8b78d2b48b53ca470995129c
+Library/metadata/bd/bd2e6adb8b78d2b48b53ca470995129c.info
+Library/ProjectSettings.asset
+Library/ShaderCache/1/1656c5e1c27822320dbfbde7546c8d83.bin
+Library/ShaderCache/3/35673037ef67160260bc6ec8633ae51a.bin
+Library/ShaderCache/8/8c7e6515d7d44bcbda971cb2c24e7702.bin
+Library/ShaderCache/a/a92beed0086c3e4bef81d7259e2edd66.bin
+Library/ShaderCache/d/db015b86bf2964987bf38401855944f7.bin
+Library/ShaderCache/e/eb1b14ac357c1022b998d743abdb311a.bin
+Library/LastSceneManagerSetup.txt
+Library/expandedItems
