--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\PopEffect.cs" />
      <Compile Include="Assets\Script\AppleSpawner.cs" />
      <Compile Include="Assets\Script\Basket.cs" />
      <Compile Include="Assets\Script\BasketCollect.cs" />
